# grove

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  fix_og.py  registry-sources.json
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
core/: Cargo.toml  README.md
core/src/: lib.rs  ops.rs
docs/: roadmap.md
engineering/sprints/GROVE-S01/GROVE-S01-T04/: APPROVE-SUMMARY.json  ARCHITECT_APPROVAL.md  CODE_REVIEW.md  IMPLEMENTATION-SUMMARY.json  INDEX.md  PLAN-SUMMARY.json  PLAN.md  PLAN_REVIEW.md  PROGRESS.md  REVIEW-IMPL-SUMMARY.json  REVIEW-PLAN-SUMMARY.json  VALIDATION-SUMMARY.json  VALIDATION_REPORT.md
engineering/sprints/GROVE-S01/GROVE-S01-T04/smoke/: .gitignore  Cargo.toml
engineering/sprints/GROVE-S01/GROVE-S01-T04/smoke/sample/: geometry.rs
engineering/sprints/GROVE-S01/GROVE-S01-T04/smoke/src/: main.rs
registry/: index.json
registry/javascript/: manifest.json
registry/python/: manifest.json
registry/rust/: manifest.json
site/: index.html
skills/grove/: SKILL.md
src/: fetch.rs  ingest.rs  main.rs
